# mt_scratches

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
include/mt_scratches/: singletones.h  static_polymorphism.h
src/: singletones.cpp
tests/: CMakeLists.txt
tests/src/: patterns.cpp
